fixtures/typescript/fallback/should_fail/fallbackIdentifier.ts
const fallbackTimeout = 30;
const FALLBACK_CONFIG = { host: "localhost" };

function getFallbackValue(): string {
  return "default";
}
